Fixed Image stretching on Mobile for the Header Image

--- a/src/components/Introduction/Intro.css
+++ b/src/components/Introduction/Intro.css
@@ -152,6 +152,10 @@
       color: rgba(255, 255, 255, 0.4);
       z-index: 1;
   }
+  #image1{
+    width: 100%;
+    object-fit:fill;
+}
   }
 /* @media screen and (max-width: 560px) {
     .intro__text span{
